; ModuleID = '/home/carl/AnghaBench/linux/sound/isa/gus/extr_gus_pcm.c_playback_copy_ack.c'
source_filename = "/home/carl/AnghaBench/linux/sound/isa/gus/extr_gus_pcm.c_playback_copy_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.snd_pcm_runtime* }
%struct.snd_pcm_runtime = type { i64, i32, %struct.gus_pcm_private* }
%struct.gus_pcm_private = type { i64, %struct.snd_gus_card* }
%struct.snd_gus_card = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*, i32, i32)* @playback_copy_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @playback_copy_ack(%struct.snd_pcm_substream* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.snd_pcm_substream*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.snd_pcm_runtime*, align 8
  %9 = alloca %struct.gus_pcm_private*, align 8
  %10 = alloca %struct.snd_gus_card*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %13 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %5, align 8
  %14 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %13, i32 0, i32 0
  %15 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %14, align 8
  store %struct.snd_pcm_runtime* %15, %struct.snd_pcm_runtime** %8, align 8
  %16 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %8, align 8
  %17 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %16, i32 0, i32 2
  %18 = load %struct.gus_pcm_private*, %struct.gus_pcm_private** %17, align 8
  store %struct.gus_pcm_private* %18, %struct.gus_pcm_private** %9, align 8
  %19 = load %struct.gus_pcm_private*, %struct.gus_pcm_private** %9, align 8
  %20 = getelementptr inbounds %struct.gus_pcm_private, %struct.gus_pcm_private* %19, i32 0, i32 1
  %21 = load %struct.snd_gus_card*, %struct.snd_gus_card** %20, align 8
  store %struct.snd_gus_card* %21, %struct.snd_gus_card** %10, align 8
  %22 = load i32, i32* %7, align 4
  %23 = icmp ugt i32 %22, 32
  br i1 %23, label %24, label %35

24:                                               ; preds = %3
  %25 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load %struct.gus_pcm_private*, %struct.gus_pcm_private** %9, align 8
  %28 = getelementptr inbounds %struct.gus_pcm_private, %struct.gus_pcm_private* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i32, i32* %6, align 4
  %31 = zext i32 %30 to i64
  %32 = add nsw i64 %29, %31
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @snd_gf1_pcm_block_change(%struct.snd_pcm_substream* %25, i32 %26, i64 %32, i32 %33)
  store i32 %34, i32* %4, align 4
  br label %63

35:                                               ; preds = %3
  %36 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %8, align 8
  %37 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 8
  %39 = call i32 @snd_pcm_format_width(i32 %38)
  %40 = icmp eq i32 %39, 16
  %41 = zext i1 %40 to i32
  store i32 %41, i32* %11, align 4
  %42 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %8, align 8
  %43 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @snd_pcm_format_unsigned(i32 %44)
  store i32 %45, i32* %12, align 4
  %46 = load %struct.snd_gus_card*, %struct.snd_gus_card** %10, align 8
  %47 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %8, align 8
  %48 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load i32, i32* %6, align 4
  %51 = zext i32 %50 to i64
  %52 = add nsw i64 %49, %51
  %53 = load %struct.gus_pcm_private*, %struct.gus_pcm_private** %9, align 8
  %54 = getelementptr inbounds %struct.gus_pcm_private, %struct.gus_pcm_private* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = load i32, i32* %6, align 4
  %57 = zext i32 %56 to i64
  %58 = add nsw i64 %55, %57
  %59 = load i32, i32* %7, align 4
  %60 = load i32, i32* %11, align 4
  %61 = load i32, i32* %12, align 4
  %62 = call i32 @snd_gf1_pcm_poke_block(%struct.snd_gus_card* %46, i64 %52, i64 %58, i32 %59, i32 %60, i32 %61)
  store i32 %62, i32* %4, align 4
  br label %63

63:                                               ; preds = %35, %24
  %64 = load i32, i32* %4, align 4
  ret i32 %64
}

declare dso_local i32 @snd_gf1_pcm_block_change(%struct.snd_pcm_substream*, i32, i64, i32) #1

declare dso_local i32 @snd_pcm_format_width(i32) #1

declare dso_local i32 @snd_pcm_format_unsigned(i32) #1

declare dso_local i32 @snd_gf1_pcm_poke_block(%struct.snd_gus_card*, i64, i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
